[gd_scene load_steps=31 format=3 uid="uid://c1t63727h7wjs"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_edljl"]
[ext_resource type="PackedScene" uid="uid://bp0en5yiusj12" path="res://scenes/characters/Velurian.tscn" id="2_4ae6g"]
[ext_resource type="Texture2D" uid="uid://51hpgmxj3fv8" path="res://assets/bloques/2048.png" id="3_e3s88"]
[ext_resource type="Texture2D" uid="uid://djxlykrew3oto" path="res://assets/UI/Lucid-V1.2/Lucid V1.2/PNG/Flat/64/Chevron-Arrow-Left.png" id="4_ofdtt"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="4_tpmkl"]
[ext_resource type="Texture2D" uid="uid://dao173l40mql2" path="res://assets/UI/health_bar.png" id="6_0x2o7"]
[ext_resource type="Script" path="res://scripts/HealthBar.gd" id="6_13h7c"]
[ext_resource type="Texture2D" uid="uid://b860xhuit7d1r" path="res://assets/direction.png" id="6_e0ev5"]
[ext_resource type="Texture2D" uid="uid://diu4uny44vvvb" path="res://assets/UI/health_background.png" id="7_f17ho"]
[ext_resource type="Texture2D" uid="uid://dmgh8mvl1ghfc" path="res://assets/UI/mana_bar.png" id="9_8kkqk"]
[ext_resource type="Texture2D" uid="uid://bonqfy8vsu2wa" path="res://assets/UI/mana_background.png" id="10_n7xet"]
[ext_resource type="Script" path="res://scripts/ManaBar.gd" id="11_y0na4"]
[ext_resource type="Texture2D" uid="uid://cx8fs2qeu88kh" path="res://assets/UI/health_bar_enemy.png" id="12_tslit"]
[ext_resource type="Texture2D" uid="uid://dwsmnkxdx5sqn" path="res://assets/UI/health_background_enemy.png" id="13_eyifu"]
[ext_resource type="Texture2D" uid="uid://drqgurxiiylsh" path="res://assets/UI/cage_movement.png" id="14_oca1n"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_seuql"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cuv1s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w8tqu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1atr8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0rok"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1sud"]

[sub_resource type="Animation" id="Animation_unyk7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(779, 1451)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Direction:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_g6g2t"]
resource_name = "down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(544, 1200), Vector2(544, 1700)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.5708, 0.0]
}

[sub_resource type="Animation" id="Animation_s85fk"]
resource_name = "left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(779, 1451), Vector2(279, 1451)]
}

[sub_resource type="Animation" id="Animation_bs5jc"]
resource_name = "right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(279, 1451), Vector2(779, 1451)]
}

[sub_resource type="Animation" id="Animation_1har1"]
resource_name = "up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Direction:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Direction:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(544, 1700), Vector2(544, 1200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Direction:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Direction:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.5708, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jp0x7"]
_data = {
"RESET": SubResource("Animation_unyk7"),
"down": SubResource("Animation_g6g2t"),
"left": SubResource("Animation_s85fk"),
"right": SubResource("Animation_bs5jc"),
"up": SubResource("Animation_1har1")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ievsx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f11gy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wfbwq"]

[node name="Level" type="Node2D"]
script = ExtResource("1_edljl")
enemy_type = ExtResource("2_4ae6g")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1080.0
offset_bottom = 2160.0
texture = ExtResource("3_e3s88")

[node name="GoBackButton" type="Button" parent="TextureRect"]
layout_mode = 1
offset_left = 15.0
offset_top = 15.0
offset_right = 59.0
offset_bottom = 79.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_seuql")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cuv1s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_w8tqu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1atr8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h0rok")
icon = ExtResource("4_ofdtt")
flat = true

[node name="Win" type="Label" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.5
offset_top = 150.0
offset_right = 147.5
offset_bottom = 244.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1sud")
text = "YOU WIN"

[node name="Lose" type="Label" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.5
offset_top = 150.0
offset_right = 147.5
offset_bottom = 244.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 65
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1sud")
text = "YOU LOSE"

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("4_tpmkl")

[node name="GridContainer" type="GridContainer" parent="Grid"]
offset_left = 95.0
offset_top = 998.0
offset_right = 1000.0
offset_bottom = 1903.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 33
theme_override_constants/v_separation = 33
columns = 4

[node name="CenterContainer1" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer2" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer3" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer4" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer5" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer6" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer7" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer8" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer9" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer10" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer11" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer12" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer13" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer14" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer15" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="CenterContainer16" type="CenterContainer" parent="Grid/GridContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="Grid"]
libraries = {
"": SubResource("AnimationLibrary_jp0x7")
}

[node name="Direction" type="Sprite2D" parent="Grid"]
visible = false
position = Vector2(779, 1451)
texture = ExtResource("6_e0ev5")

[node name="ArsenMarker" type="Marker2D" parent="."]
position = Vector2(271, 652)

[node name="EnemyMarker" type="Marker2D" parent="."]
position = Vector2(773, 652)

[node name="ArsenHealthBar" type="TextureProgressBar" parent="."]
offset_left = 66.0
offset_top = 815.0
offset_right = 466.0
offset_bottom = 897.0
texture_over = ExtResource("6_0x2o7")
texture_progress = ExtResource("7_f17ho")
script = ExtResource("6_13h7c")

[node name="TextEdit" type="Label" parent="ArsenHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -33.0
offset_right = 42.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_ievsx")

[node name="ArsenManaBar" type="TextureProgressBar" parent="."]
offset_left = 66.0
offset_top = 873.0
offset_right = 466.0
offset_bottom = 948.0
texture_over = ExtResource("9_8kkqk")
texture_progress = ExtResource("10_n7xet")
script = ExtResource("11_y0na4")

[node name="EnemyHealthBar" type="TextureProgressBar" parent="."]
offset_left = 616.0
offset_top = 816.0
offset_right = 1016.0
offset_bottom = 891.0
texture_over = ExtResource("12_tslit")
texture_progress = ExtResource("13_eyifu")
script = ExtResource("6_13h7c")

[node name="TextEdit" type="Label" parent="EnemyHealthBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -33.0
offset_right = 45.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxEmpty_f11gy")

[node name="Cage_movement" type="TextureRect" parent="."]
offset_left = 464.0
offset_top = 808.0
offset_right = 614.0
offset_bottom = 958.0
texture = ExtResource("14_oca1n")

[node name="TextEdit" type="Label" parent="Cage_movement"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.5
offset_top = -51.5
offset_right = 17.5
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxEmpty_wfbwq")

[connection signal="pressed" from="TextureRect/GoBackButton" to="." method="_on_go_back_button_pressed"]
